TG-2 cambio de nombre del proyecto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myperp",
+  "name": "horgmigon-erp",
   "version": "1.0.0",
   "description": "Proyecto Cloud ERP Open Source creado usando Vue.js",
   "author": "The Black Groove <catrielcruz1995@gmail.com>",
