--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
+    "express-session": "^1.15.6",
+    "express-session-level": "^1.0.0",
+    "level": "^1.7.0",
+    "mysql": "^2.15.0",
     "vue": "^2.4.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
