--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql": "^2.15.0",
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-select": "github:sagalbot/vue-select"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
