--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session-level": "^1.0.0",
     "level": "^1.7.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.3.1",
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
